{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 190,
  "lineage": "34017b3f-ab4a-4fd5-f336-c343b0b7c65b",
  "resources": [
    {
      "module": "module.private_link_service.module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/loadBalancers/lb-private-link-service-westus2/frontendIPConfigurations/lb-private-link-service-westus2-lb-frontend-ip",
                "name": "lb-private-link-service-westus2-lb-frontend-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/publicIPAddresses/lb-private-link-service-westus2-public-ip"
              }
            ],
            "id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/loadBalancers/lb-private-link-service-westus2",
            "location": "westus2",
            "name": "lb-private-link-service-westus2",
            "resource_group_name": "rg-private-link-service-westus2",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.private_link_service.module.loadbalancer.azurerm_public_ip.lb_public_ip",
            "module.private_link_service.module.resource_group.azurerm_resource_group.resource_group",
            "module.private_link_service.module.subnet.azurerm_subnet.subnet",
            "module.private_link_service.module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_link_service.module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/loadBalancers/lb-private-link-service-westus2/backendAddressPools/lb-private-link-service-westus2-backend-pool",
            "loadbalancer_id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/loadBalancers/lb-private-link-service-westus2",
            "name": "lb-private-link-service-westus2-backend-pool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.private_link_service.module.loadbalancer.azurerm_lb.lb",
            "module.private_link_service.module.loadbalancer.azurerm_public_ip.lb_public_ip",
            "module.private_link_service.module.resource_group.azurerm_resource_group.resource_group",
            "module.private_link_service.module.subnet.azurerm_subnet.subnet",
            "module.private_link_service.module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_link_service.module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "http_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/loadBalancers/lb-private-link-service-westus2/probes/HttpProbe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/loadBalancers/lb-private-link-service-westus2",
            "name": "HttpProbe",
            "number_of_probes": 2,
            "port": 8080,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/actuator/health"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.private_link_service.module.loadbalancer.azurerm_lb.lb",
            "module.private_link_service.module.loadbalancer.azurerm_public_ip.lb_public_ip",
            "module.private_link_service.module.resource_group.azurerm_resource_group.resource_group",
            "module.private_link_service.module.subnet.azurerm_subnet.subnet",
            "module.private_link_service.module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_link_service.module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/loadBalancers/lb-private-link-service-westus2/backendAddressPools/lb-private-link-service-westus2-backend-pool"
            ],
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "floating_ip_enabled": false,
            "frontend_ip_configuration_id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/loadBalancers/lb-private-link-service-westus2/frontendIPConfigurations/lb-private-link-service-westus2-lb-frontend-ip",
            "frontend_ip_configuration_name": "lb-private-link-service-westus2-lb-frontend-ip",
            "frontend_port": 80,
            "id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/loadBalancers/lb-private-link-service-westus2/loadBalancingRules/HttpRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/loadBalancers/lb-private-link-service-westus2",
            "name": "HttpRule",
            "probe_id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/loadBalancers/lb-private-link-service-westus2/probes/HttpProbe",
            "protocol": "Tcp",
            "tcp_reset_enabled": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.private_link_service.module.loadbalancer.azurerm_lb.lb",
            "module.private_link_service.module.loadbalancer.azurerm_lb_backend_address_pool.backend_pool",
            "module.private_link_service.module.loadbalancer.azurerm_lb_probe.http_probe",
            "module.private_link_service.module.loadbalancer.azurerm_public_ip.lb_public_ip",
            "module.private_link_service.module.resource_group.azurerm_resource_group.resource_group",
            "module.private_link_service.module.subnet.azurerm_subnet.subnet",
            "module.private_link_service.module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_link_service.module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/publicIPAddresses/lb-private-link-service-westus2-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.115.159.87",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "lb-private-link-service-westus2-public-ip",
            "resource_group_name": "rg-private-link-service-westus2",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "lb-private-link-service-westus2-public-ip",
            "resource_group_name": "rg-private-link-service-westus2",
            "subscription_id": "7b7860cc-5cfd-4700-b515-0ccca8e270d4"
          },
          "dependencies": [
            "module.private_link_service.module.resource_group.azurerm_resource_group.resource_group",
            "module.private_link_service.module.subnet.azurerm_subnet.subnet",
            "module.private_link_service.module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_link_service.module.network_security_group",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/networkSecurityGroups/nsg-private-link-service-westus2",
            "location": "westus2",
            "name": "nsg-private-link-service-westus2",
            "resource_group_name": "rg-private-link-service-westus2",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-private-link-service-westus2",
            "resource_group_name": "rg-private-link-service-westus2",
            "subscription_id": "7b7860cc-5cfd-4700-b515-0ccca8e270d4"
          },
          "dependencies": [
            "module.private_link_service.module.resource_group.azurerm_resource_group.resource_group",
            "module.private_link_service.module.subnet.azurerm_subnet.subnet",
            "module.private_link_service.module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_link_service.module.network_security_group",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/virtualNetworks/vnet-private-link-service-westus2/subnets/subnet-private-link-service-westus2",
            "network_security_group_id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/networkSecurityGroups/nsg-private-link-service-westus2",
            "subnet_id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/virtualNetworks/vnet-private-link-service-westus2/subnets/subnet-private-link-service-westus2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.private_link_service.module.network_security_group.azurerm_network_security_group.nsg",
            "module.private_link_service.module.resource_group.azurerm_resource_group.resource_group",
            "module.private_link_service.module.subnet.azurerm_subnet.subnet",
            "module.private_link_service.module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_link_service.module.network_security_rules",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_app_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/networkSecurityGroups/nsg-private-link-service-westus2/securityRules/Allow-App-Traffic",
            "name": "Allow-App-Traffic",
            "network_security_group_name": "nsg-private-link-service-westus2",
            "priority": 105,
            "protocol": "Tcp",
            "resource_group_name": "rg-private-link-service-westus2",
            "source_address_prefix": "Internet",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-App-Traffic",
            "network_security_group_name": "nsg-private-link-service-westus2",
            "resource_group_name": "rg-private-link-service-westus2",
            "subscription_id": "7b7860cc-5cfd-4700-b515-0ccca8e270d4"
          },
          "dependencies": [
            "module.private_link_service.module.network_security_group.azurerm_network_security_group.nsg",
            "module.private_link_service.module.network_security_group.azurerm_subnet_network_security_group_association.nsg_association",
            "module.private_link_service.module.resource_group.azurerm_resource_group.resource_group",
            "module.private_link_service.module.subnet.azurerm_subnet.subnet",
            "module.private_link_service.module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_link_service.module.network_security_rules",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/networkSecurityGroups/nsg-private-link-service-westus2/securityRules/Allow-Internet-LB-80",
            "name": "Allow-Internet-LB-80",
            "network_security_group_name": "nsg-private-link-service-westus2",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg-private-link-service-westus2",
            "source_address_prefix": "Internet",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-Internet-LB-80",
            "network_security_group_name": "nsg-private-link-service-westus2",
            "resource_group_name": "rg-private-link-service-westus2",
            "subscription_id": "7b7860cc-5cfd-4700-b515-0ccca8e270d4"
          },
          "dependencies": [
            "module.private_link_service.module.network_security_group.azurerm_network_security_group.nsg",
            "module.private_link_service.module.network_security_group.azurerm_subnet_network_security_group_association.nsg_association",
            "module.private_link_service.module.resource_group.azurerm_resource_group.resource_group",
            "module.private_link_service.module.subnet.azurerm_subnet.subnet",
            "module.private_link_service.module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_link_service.module.network_security_rules",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_lb_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/networkSecurityGroups/nsg-private-link-service-westus2/securityRules/Allow-LB-Backend",
            "name": "Allow-LB-Backend",
            "network_security_group_name": "nsg-private-link-service-westus2",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "rg-private-link-service-westus2",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-LB-Backend",
            "network_security_group_name": "nsg-private-link-service-westus2",
            "resource_group_name": "rg-private-link-service-westus2",
            "subscription_id": "7b7860cc-5cfd-4700-b515-0ccca8e270d4"
          },
          "dependencies": [
            "module.private_link_service.module.network_security_group.azurerm_network_security_group.nsg",
            "module.private_link_service.module.network_security_group.azurerm_subnet_network_security_group_association.nsg_association",
            "module.private_link_service.module.resource_group.azurerm_resource_group.resource_group",
            "module.private_link_service.module.subnet.azurerm_subnet.subnet",
            "module.private_link_service.module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_link_service.module.subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/virtualNetworks/vnet-private-link-service-westus2/subnets/subnet-private-link-service-westus2",
            "name": "subnet-private-link-service-westus2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-private-link-service-westus2",
            "virtual_network_name": "vnet-private-link-service-westus2"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet-private-link-service-westus2",
            "resource_group_name": "rg-private-link-service-westus2",
            "subscription_id": "7b7860cc-5cfd-4700-b515-0ccca8e270d4",
            "virtual_network_name": "vnet-private-link-service-westus2"
          },
          "dependencies": [
            "module.private_link_service.module.resource_group.azurerm_resource_group.resource_group",
            "module.private_link_service.module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_link_service.module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7c17000a-3efd-49e4-b458-7bd3e9a8899a",
            "id": "/subscriptions/7b7860cc-5cfd-4700-b515-0ccca8e270d4/resourceGroups/rg-private-link-service-westus2/providers/Microsoft.Network/virtualNetworks/vnet-private-link-service-westus2",
            "location": "westus2",
            "name": "vnet-private-link-service-westus2",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-private-link-service-westus2"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-private-link-service-westus2",
            "resource_group_name": "rg-private-link-service-westus2",
            "subscription_id": "7b7860cc-5cfd-4700-b515-0ccca8e270d4"
          },
          "dependencies": [
            "module.private_link_service.module.resource_group.azurerm_resource_group.resource_group"
          ]
        }
      ]
    }
  ]
}